# wasm_sketches

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  wasm_sketches.code-workspace
bevy_sketches/: Cargo.toml
bevy_sketches/assets/: tut_shader2_material.wgsl  tut_shader_material.wgsl  tut_time_shader_eg.wgsl
bevy_sketches/assets/poc_shaders/: erratic_wave.wgsl  rects.wgsl  rects_from_additional_data.wgsl  res_rects.wgsl  scaling_net.wgsl  time_colors.wgsl
bevy_sketches/assets/shader_common/: common_uniform.wgsl
bevy_sketches/assets/shiftyc/: building_lights.wgsl
bevy_sketches/assets/tut_shaders/: bevy_custom_material.frag  bevy_custom_material.vert  bevy_custom_material.wgsl  shapefuncs.wgsl  tut_shader2_material.wgsl  tut_shader2_material2.wgsl  tut_shader3_building_lights.wgsl  tut_shader3_colors.wgsl  tut_shader3_colors_mix.wgsl  tut_shader3_shapes_rect.wgsl  tut_shader3_shapes_rect2.wgsl  tut_shader3_shaping_line.wgsl  tut_shader3_shaping_trig.wgsl  tut_shader_material.wgsl  tut_time_shader_eg.wgsl
bevy_sketches/examples/: building_lights_shader.rs  cellular.rs  erratic_wave_shader.rs  path_changer.rs  scaling_net_shader.rs  shader_material_poc.rs  shiftyc.rs  shiftyrect.rs  shiftyufo.rs  tut_bevy_glsl_shader.rs  tut_shader.rs  tut_shader2.rs  tut_shader3.rs
bevy_sketches/src/: base.rs  cellular.rs  lib.rs  path_changer.rs  shader_material.rs  shapegen.rs  shapeutils.rs  shifty_circle.rs
bevy_sketches/www/: building_lights_shader.html  cellular.html  config.js  config.server.js  erratic_wave_shader.html  layout_flex.html  layout_flex.tpl.html  layout_sketches.html  layout_sketches.tpl.html  layout_sketches_prev.tpl.html  match_element.tpl.html  match_window.tpl.html  path_changer.html  scaling_net_shader.html  shader_material_poc.html  shiftyc.html  shiftyrect.html  shiftyufo.html  sketches.json
src/: lib.rs  (+2 more)
(+35 files in other folders)
