[package]
name = "wasm_sketches"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bevy = { version = "0.6.0", features = ["dynamic"] }
bevy = { version = "0.6.0" }
bevy_prototype_lyon = "0.4.0"
rand = "0.8.4"
web-sys = { version = "0.3.56", features = ['Window'] }

[features]
framestats = []

[profile.release]
lto = true
opt-level = "z"