[package]
name = "bevy_sketches"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.6.1", features = ["dynamic"] }
# bevy = { version = "0.6.1" }
bevy_prototype_lyon = "0.4.0"
rand = "0.8.5"
bevy_web_extras = { path = "../bevy_web_extras" }

[features]
framestats = []
debuglog = []

